[gd_scene load_steps=42 format=3 uid="uid://b86gsusri0i8h"]

[ext_resource type="Texture2D" uid="uid://c14inlhdcdt1y" path="res://assets/hero/Mask Dude/Idle no mask (32x32).png" id="1_avq60"]
[ext_resource type="Script" uid="uid://dx4n58aebofx4" path="res://scripts/heroe.gd" id="1_cevsb"]
[ext_resource type="Texture2D" uid="uid://cb2ti25qpubmf" path="res://assets/hero/Mask Dude/Desappearing (96x96).png" id="2_5pvil"]
[ext_resource type="Texture2D" uid="uid://h0i7qq5mlahn" path="res://assets/hero/Mask Dude/Run no mask(32x32).png" id="3_3jh7e"]
[ext_resource type="AudioStream" uid="uid://ckbewvtlkajcs" path="res://musicandeffects/General/Hero/Damage.mp3" id="4_b1cmc"]
[ext_resource type="AudioStream" uid="uid://cwfgt5mcoyxt" path="res://musicandeffects/General/Hero/Jump.wav" id="5_k84ai"]
[ext_resource type="Texture2D" uid="uid://cbsw27waxfxqm" path="res://assets/hero/Mask Dude/Wall Jump no mask (32x32).png" id="5_uiisv"]
[ext_resource type="AudioStream" uid="uid://c560gvqkqv4vt" path="res://musicandeffects/General/Hero/die.mp3" id="7_qp8yj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qp8yj"]
atlas = ExtResource("2_5pvil")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uiisv"]
atlas = ExtResource("2_5pvil")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_inwma"]
atlas = ExtResource("2_5pvil")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_id7gv"]
atlas = ExtResource("2_5pvil")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5riv"]
atlas = ExtResource("2_5pvil")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_572po"]
atlas = ExtResource("2_5pvil")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yoxw"]
atlas = ExtResource("2_5pvil")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvl55"]
atlas = ExtResource("1_avq60")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhkpt"]
atlas = ExtResource("1_avq60")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6su4"]
atlas = ExtResource("1_avq60")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh71a"]
atlas = ExtResource("1_avq60")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtxgv"]
atlas = ExtResource("1_avq60")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbnh3"]
atlas = ExtResource("1_avq60")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvi0p"]
atlas = ExtResource("1_avq60")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtedn"]
atlas = ExtResource("1_avq60")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkcga"]
atlas = ExtResource("1_avq60")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sk714"]
atlas = ExtResource("1_avq60")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mya42"]
atlas = ExtResource("1_avq60")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mok2m"]
atlas = ExtResource("3_3jh7e")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn7xh"]
atlas = ExtResource("3_3jh7e")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7sb4"]
atlas = ExtResource("3_3jh7e")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_181ow"]
atlas = ExtResource("3_3jh7e")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mes1b"]
atlas = ExtResource("3_3jh7e")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvryj"]
atlas = ExtResource("3_3jh7e")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_46mgd"]
atlas = ExtResource("3_3jh7e")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8rw2"]
atlas = ExtResource("3_3jh7e")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpgub"]
atlas = ExtResource("3_3jh7e")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk5vo"]
atlas = ExtResource("3_3jh7e")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2c0f"]
atlas = ExtResource("3_3jh7e")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bg1xb"]
atlas = ExtResource("3_3jh7e")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6ykq"]
atlas = ExtResource("5_uiisv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0lmoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp8yj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uiisv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inwma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_id7gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5riv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_572po")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yoxw")
}],
"loop": false,
"name": &"Dissapear",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvl55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhkpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6su4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh71a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtxgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbnh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvi0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtedn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkcga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sk714")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mya42")
}],
"loop": true,
"name": &"Idle",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mok2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn7xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7sb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_181ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mes1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvryj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46mgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8rw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpgub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk5vo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2c0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bg1xb")
}],
"loop": true,
"name": &"Run",
"speed": 14.0
}, {
"frames": [{
"duration": 2.0,
"texture": SubResource("AtlasTexture_y6ykq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6ykq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6ykq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6ykq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6ykq")
}],
"loop": false,
"name": &"Walljump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5rk6"]
size = Vector2(19, 22)

[node name="Heroe" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_cevsb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(1, 0.9375)
sprite_frames = SubResource("SpriteFrames_0lmoq")
animation = &"Run"
autoplay = "Idle"

[node name="MaskSprite" type="Sprite2D" parent="."]
position = Vector2(3, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 4)
shape = SubResource("RectangleShape2D_k5rk6")

[node name="InvulnerabiltyTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="DamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_b1cmc")
volume_db = 0.5
bus = &"SFX"

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_k84ai")
bus = &"SFX"

[node name="DieSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(1, 0.9375)
stream = ExtResource("7_qp8yj")
volume_db = 0.5
pitch_scale = 0.8
bus = &"SFX"

[connection signal="timeout" from="InvulnerabiltyTimer" to="." method="_on_invulnerabilty_timer_timeout"]
